# Edge-Detection-Assignment-jsp

./: AndroidManifest.xml  README.md  build.gradle.kts  gradle.properties  local.properties.example  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  opencv-processor.cpp
app/src/main/java:com:edgedetector/: CameraManager.kt  MainActivity.kt
app/src/main/java:com:edgedetector/jni/: NativeProcessor.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
